--- a/style.css
+++ b/style.css
@@ -11,5 +11,14 @@ header{
     color: white;
     text-align: center;
     padding: 20px;
-    
+}
+section{
+    margin: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+h2{
+    color:#4caf50;
 }
