--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@ section{
 h2{
     color:#4caf50;
 }
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+ul li{
+    background-color: #333;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    
+}
