--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ ul{
     padding: 0;
 }
 ul li{
-    background-color: #333;
+    background-color: #bcb8b8;
     margin: 5px;
     padding: 10px;
     border-radius: 5px;
@@ -63,6 +63,6 @@ button{
 }
 button{
     background-color: #45a049;
-    
+
 }
 
