--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ ul{
     padding: 0;
 }
 ul li{
-    background-color: #bcb8b8;
+    background-color: #c3bebe;
     margin: 5px;
     padding: 10px;
     border-radius: 5px;
